2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/bits/socket.h: New file, copy from the bsd4.4 one.
	(SOCK_MAX, SOCK_TYPE_MASK, SOCK_CLOEXEC, SOCK_NONBLOCK): New
	definitions.

	accept4 for GNU Hurd.
	* include/sys/socket.h (__libc_accept4): New prototype.
	* sysdeps/mach/hurd/accept4.c: New file, copy from accept.c.  Evolve it
	to implement __libc_accept4.
	* sysdeps/mach/hurd/accept.c (accept): Reimplement using
	__libc_accept4.
	* sysdeps/mach/hurd/kernel-features.h (__ASSUME_ACCEPT4): Define.

	* sysdeps/mach/hurd/i386/____longjmp_chk.S: New file.
	* sysdeps/mach/hurd/i386/signal-defines.sym: New file.
	* sysdeps/mach/hurd/i386/Makefile (gen-as-const-headers): Add
	signal-defines.sym.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

        * bits/in.h (SOL_IP, SOL_IPV6, SOL_ICMPV6): New macros.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/dl-sysdep.c (open_file): Do not raise
	assertion on O_CLOEXEC flag.
	* hurd/hurd/fd.h: Update comment to mention O_CLOEXEC.
	* hurd/intern-fd.c: Likewise.
	* hurd/port2fd.c: Likewise.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[BZ #3906]
	* bits/in.h (IPV6_PKTINFO): Define new macro.
	(IPV6_RXINFO,IPV6_TXINFO,SCM_SRCINFO): Redefine to IPV6_PKTINFO.

2012-05-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #13954]
	[BZ #13955]
	[BZ #13956]
	* sysdeps/ieee754/dbl-64/s_logb.c (__logb): Fix for subnormal number.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_logb.c (__logb): Likewise.
	* sysdeps/ieee754/flt-32/s_logbf.c (__logf): Likewise.
	* sysdeps/ieee754/ldbl-128/s_logbl.c (__logbl): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/s_logbl.c (__logbl): Likewise.
	* sysdeps/ieee754/ldbl-96/s_logbl.c (__logbl): Likewise.
	* math/libm-test.inc (logb_test) : Additional logb tests.

2012-05-09  Andreas Schwab  <schwab@linux-m68k.org>
	    Andreas Jaeger  <aj@suse.de>

	* configure.in (obsolete-rpc): Add new option --enable-obsolete-rpc.